--- a/vignettes/ewceData.Rmd
+++ b/vignettes/ewceData.Rmd
@@ -45,7 +45,7 @@ The *EWCE* method can be applied to any gene list. In the paper we reported it's
 
 # Data
 
-The data in the `ewceData` package are used throughout EWCE's associated vignette to give insight into its functionaltity. These datasets are:
+The data in the `ewceData` package are used throughout EWCE's associated vignette to give insight into its functionality. These datasets are:
 
 * **cortex_mrna** - Karolinska Cortex/Hippocamus dataset subsample
 
