--- a/vignettes/ewceData.Rmd
+++ b/vignettes/ewceData.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Data package for Expression Weighted Celltype Enrichment *EWCE*"
-author: "Nathan Skene"
+author: "Alan Murphy and Nathan Skene"
 date: "`r Sys.Date()`"
 output:
   html_document:
